--- a/src/Roslyn.Resolvers.Demo/Roslyn.Resolvers.Demo.csproj
+++ b/src/Roslyn.Resolvers.Demo/Roslyn.Resolvers.Demo.csproj
@@ -11,7 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="foo.csx;main.csx">
+    <None Update="Scripts\Test.csx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Scripts\Message.csx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Scripts\Module.csx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
